--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Webpack App</title>
-        <script defer="defer" src="main.js"></script>
+        <!-- <script defer="defer" src="main.js"></script> -->
     </head>
     <body class="d-flex flex-column min-vh-100">
         <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
