--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                       <div class="col-auto"><button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary">Добавить</button></div>
                     </div>
                   </form>
-                  <p class="mt-2 mb-0 text-muted">Например <a href="#" class="example-url text-reset">https://ru.hexlet.io/lessons.rss</a></p>
+                  <p class="mt-2 mb-0 text-muted example">Например <a href="#" class="example-url text-reset">https://ru.hexlet.io/lessons.rss</a></p>
                   <p class="feedback m-0 position-absolute small text-danger"></p>
                 </div>
               </div>
