add set timeout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h5 class="modal-title"></h5><button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body text-break"></div>
-              <div class="modal-footer"><a class="modalLink btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью </a><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button></div>
+              <div class="modal-footer"><a class="modalLink btn btn-primary full-article read" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью</a><button type="button" class="btn btn-secondary closeBtn" data-bs-dismiss="modal">Закрыть</button></div>
             </div>
           </div>
         </div>             
