--- a/index.html
+++ b/index.html
@@ -1,62 +1,61 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Webpack App</title>
-        <!-- <script defer="defer" src="main.js"></script> -->
-    </head>
-      <body class="d-flex flex-column min-vh-100">
-        <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
-          <div class="modal-dialog" role="document">
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Webpack App</title>
+      <!-- <script defer="defer" src="main.js"></script> -->
+   </head>
+   <body class="d-flex flex-column min-vh-100">
+      <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+         <div class="modal-dialog" role="document">
             <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title"></h5><button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body text-break"></div>
-              <div class="modal-footer"><a class="modalLink btn btn-primary full-article read" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью</a><button type="button" class="btn btn-secondary closeBtn" data-bs-dismiss="modal">Закрыть</button></div>
-            </div>
-          </div>
-        </div>             
-              <section class="container-fluid bg-dark p-5">
-                <div class="text-end">
-                  <div role="group" class="btn-group btn-group-sm" aria-label="Small button group">
-                      <button type="button" class="btn btn-outline-secondary active lngBtn" data-lng="ru">ru</button>
-                      <button type="button" class="btn btn-outline-secondary lngBtn" data-lng="en">en</button>
-                  </div>
+               <div class="modal-header">
+                  <h5 class="modal-title"></h5>
+                  <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
                </div>
-                  
-                <div class="row">
-                  <div class="col-md-10 col-lg-8 mx-auto text-white">
-                    <h1 class="display-3 mb-0">RSS-агрегатор</h1>
-                    <p class="lead">Получайте уведомления о новом контенте в удобном формате.</p>
-                    <form action="" class="rss-form text-body">
-                      <div class="row gy-2">
+               <div class="modal-body text-break"></div>
+               <div class="modal-footer"><a class="modalLink btn btn-primary full-article read" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью</a><button type="button" class="btn btn-secondary closeBtn" data-bs-dismiss="modal">Закрыть</button></div>
+            </div>
+         </div>
+      </div>
+      <main class="flex-grow-1">
+         <section class="container-fluid bg-dark p-5">
+            <div class="text-end">
+               <div role="group" class="btn-group btn-group-sm" aria-label="Small button group">
+                  <button type="button" class="btn btn-outline-secondary active lngBtn" data-lng="ru">ru</button>
+                  <button type="button" class="btn btn-outline-secondary lngBtn" data-lng="en">en</button>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-md-10 col-lg-8 mx-auto text-white">
+                  <h1 class="display-3 mb-0">RSS-агрегатор</h1>
+                  <p class="lead">Получайте уведомления о новом контенте в удобном формате.</p>
+                  <form action="" class="rss-form text-body">
+                     <div class="row gy-2">
                         <div class="col">
-                          <div class="form-floating"><input id="url-input" autofocus="" required="" name="url" aria-label="url" class="form-control w-100" placeholder="ссылка RSS" autocomplete="off"> <label for="url-input">Ссылка RSS</label></div>
+                           <div class="form-floating"><input id="url-input" autofocus="" required="" name="url" aria-label="url" class="form-control w-100" placeholder="ссылка RSS" autocomplete="off"> <label for="url-input">Ссылка RSS</label></div>
                         </div>
                         <div class="col-auto"><button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary">Добавить</button></div>
-                      </div>
-                    </form>
-                    <p class="mt-2 mb-0 text-muted example">Например <a href="#" class="example-url text-reset">https://ru.hexlet.io/lessons.rss</a></p>
-                    <div class="status"></div>
-                    <!-- <p class="feedback m-0 position-absolute small text-danger"></p> -->
-                  </div>
-                </div>
-              </section>
-
-              <section class="main container-fluid container-xxl p-5">
-                <div class="row">
-                    <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
-                    <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
-                </div>
-            </section>
-
-            </main>
-            <footer class="footer border-top py-3 mt-5 bg-light">
-              <div class="container-xl">
-                <div class="text-center">created by <a href="https://github.com/popova-iu-iu/frontend-project-11">BeepBoop</a></div>
-              </div>
-            </footer>
-      </body>
+                     </div>
+                  </form>
+                  <p class="mt-2 mb-0 text-muted example">Например <a href="#" class="example-url text-reset">https://ru.hexlet.io/lessons.rss</a></p>
+                  <div class="status"></div>
+                  <!-- <p class="feedback m-0 position-absolute small text-danger"></p> -->
+               </div>
+            </div>
+         </section>
+         <section class="main container-fluid container-xxl p-5">
+            <div class="row">
+               <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
+               <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
+            </div>
+         </section>
+      </main>
+      <footer class="footer border-top py-3 mt-5 bg-light">
+         <div class="container-xl">
+            <div class="text-center">created by <a href="https://github.com/popova-iu-iu/frontend-project-11" target="_blank">BeepBoop</a></div>
+         </div>
+      </footer>
+   </body>
 </html>
